# AIUC-MCP-Workshop

./: .gitignore  README.md  pyproject.toml
final/client/: agent.py  client.py  multi_client.py
final/client/testing/: test_client.py
final/server/: google_docs.py  google_mail.py  google_sheets.py
final/server/testing/: test_server.py
final/server/utils/: startlette.py
starter/client/: client.py  multi_client.py
starter/server/: google_mail.py  google_sheets.py  server_details.yaml
